fix gap e padding

--- a/css/mk.css
+++ b/css/mk.css
@@ -1342,6 +1342,8 @@ ul.mkUlFase li.disabled a {
 /* CARD RESPONSIVO MINMAX */
 .gridCard {
 	--minGridCard: 350px;
+	gap: 10px;
+	padding: 15px;
 	--maxGridCard: auto;
 	display: grid !important;
 	grid-template-columns: repeat(auto-fill, minmax(var(--minGridCard), var(--maxGridCard)));
